# rustySpace

./: .gitignore  AUTOFIRE_ACCURACY_FIX.md  AUTOFIRE_DEBUG_GUIDE.md  AUTOFIRE_FEATURE.md  AUTOFIRE_FIXES.md  AUTOFIRE_TRACKING_UPDATE.md  AUTO_TURRET_SYSTEM.md  BUILD_OPTIMIZATION.md  CYBERPUNK_UI_GUIDE.md  CYBERPUNK_UI_QUICKSTART.md  Cargo.toml  FEATURES.md  FINAL_UI_IMPLEMENTATION.md  FIXES_SUMMARY.md  FRIGATE_DISAPPEARANCE_BUG.md  GALAXY_SYSTEM.md  HUD_FIXES_TESTING.md  HUD_IMPROVEMENTS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LEAD_INDICATOR_FIX.md  LOOT_SYSTEM.md  OPTIMIZATION_SUMMARY.md  PAUSE_RESTART_SAVE_FEATURES.md  PERFORMANCE_AND_TARGETING_IMPROVEMENTS.md  QUICK_START.md  README.md  TURRET_COMPLETE.md  UI_REDESIGN_SUMMARY.md  WEAPONS_GUIDE.md  build-dev.sh  build.sh  run-dev.sh  run.sh
.cargo/: config.toml
.cursor/rules/: main.mdc
src/: lib.rs  main.rs
src/components/: abilities.rs  ai.rs  camera.rs  combat.rs  galaxy.rs  mod.rs  resources.rs  ship.rs  ship_classes.rs  travel.rs  upgrades_new.rs  upgrades_old.rs
src/resources/: galaxy.rs  game_state.rs  mod.rs
src/systems/: abilities.rs  ai.rs  camera.rs  combat.rs  combat_feedback.rs  effects.rs  galaxy.rs  galaxy_ui.rs  mod.rs  movement.rs  progression.rs  resources_system.rs  save_load.rs  ship_visuals.rs  skill_tree_ui.rs  spawning.rs  stat_visualization.rs  travel.rs  ui.rs  ui_animations.rs  ui_effects.rs  ui_theme.rs  upgrade_effects.rs  visuals.rs
src/utils/: math.rs  mod.rs  ship_builder.rs
