[package]
name = "space-combat-game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14", features = ["dynamic_linking"] }
bevy_rapier3d = "0.27"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
noise = "0.9"

# Fast dev builds with dynamic linking (HUGE speedup for iteration)
[profile.dev]
opt-level = 1

# Optimize dependencies even in dev mode for better performance
[profile.dev.package."*"]
opt-level = 3

# Fast release builds (still optimized but faster to compile)
[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16

# Fully optimized release builds (slower to compile, smaller/faster binary)
[profile.release]
lto = "thin"
codegen-units = 1
strip = true

